--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,30 @@
 @import url('https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
-header{
+body{
+    background-color: beige;
+    margin: 0;
+    padding: 0;
+}
+#box1{
+    background-color: bisque;
+    height: 60px;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    box-shadow: 0px 2px 10px;
+}
+h3{
+    color: rgb(65, 35, 13);
+    font-size: 30px;
+    font-family: Arvo;
+    padding: 10px;   
+    margin: 0;
+}
+.judul{
     font-family: Nunito;
+    padding: 55px 40px 1px;
+}
+#lirik{
+    padding: 1px 60px;
 }
 pre{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
