--- a/CSS/style.css
+++ b/CSS/style.css
@@ -29,3 +29,9 @@ h3{
 pre{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+a:hover{
+    color: rgb(31, 153, 254);
+}
+a:active{
+    color: rgb(25, 0, 255);
+}
