--- a/CSS/style.css
+++ b/CSS/style.css
@@ -254,7 +254,7 @@ body.nav-active { overflow: hidden; }
     object-fit: cover;
 }
 
-.section-subtile {
+.section-subtitle {
     position: relative;
     color: var(--gold-crayola);
     font-weight: var(--weight-bold);
@@ -263,7 +263,7 @@ body.nav-active { overflow: hidden; }
     margin-block-end: 12px;
 }
 
-.section-subtile::after {
+.section-subtitle::after {
     content: url('../Media/separator.svg');
     display: block;
     width: 100px;
@@ -334,6 +334,65 @@ body.nav-active { overflow: hidden; }
     content: " ";
     position: absolute;
 }
+
+.section {
+    position: relative;
+    padding-block: var(--section-space);
+    overflow: hidden;
+    z-index: 1;
+}
+
+.bg-black-10 { background-color: var(--smoky-black-2); }
+
+.grid-list {
+    display: grid;
+    gap: 40px;
+}
+
+.hover\:shine { position: relative; }
+
+.hover\:shine::after {
+    content: " ";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 100%;
+    background-image: linear-gradient(to right, transparent 0%, #fff6 100%);
+    transform: skewX(-0.08turn) translateX(-180%);
+}
+
+.hover\:shine:is(:hover, :focus-within)::after {
+    transform: skewX(-0.08turn) translateX(275%);
+    transition: var(--transition-3);
+}
+
+.img-holder {
+    aspect-ratio: var(--width) / var(--height);
+    overflow: hidden;
+    background-color: var(--eerie-black-4);
+}
+
+.btn-text {
+    color: var(--gold-crayola);
+    padding-block-end: 4px;
+    margin-inline: auto;
+    text-transform: uppercase;
+    letter-spacing: var(--letterSpacing-3);
+    font-weight: var(--weight-bold);
+    transition: var(--transition-1);
+}
+
+.btn-text:is(:hover, :focus-visible) { color: var(--white); }
+
+.shape {
+    display: none;
+    position: absolute;
+    max-width: max-content;
+    z-index: -1;
+}
+
+
 
 
 /* PRELOAD */
@@ -690,3 +749,46 @@ header.hide {
 .hero .slider-item.active .hero-text { animation-delay: 1.5s; }
 
 .hero .slider-item.active .btn { animation-delay: 2s; }
+
+
+/* MENU */
+
+.service .section-subtitle { margin-block-end: 16px; }
+
+.service .section-text { margin-block-end: 40px; }
+
+.service-card { overflow: hidden; }
+
+.service-card .has-before {
+    padding-block: 30px;
+    margin-block-end: 26px;
+    z-index: 1;
+}
+
+.service-card .has-before::before {
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 140px;
+    height: 100%;
+    background-image: url('../Media/img-pattern.svg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: repeat;
+    transition: var(--transition-2);
+    transition-delay: 0;
+    z-index: -1;
+    will-change: transform;
+}
+
+.service-card:is(:hover, :focus-within) .has-before::before {
+    transform: rotateY(0.5turn) translateX(50%);
+    transition-delay: 50ms;
+    width: 450px;
+}
+
+.service-card .card-banner { transition: var(--transition-2); }
+
+.service-card:is(:hover, :focus-within) .card-banner { transform: scale(1.05); }
+
+.service .card-title { margin-block-end: 12px; }
