cang nyobak malu nah

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1139,6 +1139,6 @@ textarea.input-field {
 .footer-link:is(:hover, :focus-visible) { color: var(--gold-crayola); }
 
 .copyright {
-    color: var(--quick-silver);
+    color: var(--gold-crayola);
     line-height: var(--lineHeight-3); 
 }
